--- a/views/userFound.handlebars
+++ b/views/userFound.handlebars
@@ -1,4 +1,5 @@
 <h2>{{user.firstName}}</h2>
+<img src="{{user.proPic}}" alt="Profile Pic">
 <dl>
     <dt>ID</dt>
     <dd>{{user._id}}</dd>
@@ -6,4 +7,18 @@
     <dd>{{user.firstName}}</dd>
     <dt>Email</dt>
     <dd>{{user.email}}</dd>
+    <dt>Location</dt>
+    <dd>{{user.location}}</dd>
+    <dt>Birthday</dt>
+    <dd>{{user.dobMonth}}/{{user.dobDay}}/{{user.dobYear}}</dd>
+    {{#if user.showGender}}  
+        <dt>Gender</dt>
+        <dd>{{user.gender}}</dd>
+    {{/if}}
+    <dt>Sexual Orientation</dt>
+    <dd>{{user.sexualOrientation}}</dd>
+    <dt>About</dt>
+    <dd>{{user.about}}</dd>
+    
+
 </dl> 
