--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -21,17 +21,15 @@ nav {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    flex-direction: row-reverse;
 }
 
 .homepage-buttons {
     color: white;
     text-transform: uppercase;
     font-size: 15px;
-    /*background: linear-gradient(to bottom, #fde014, #e48083);*/
     padding: 12px 30px;
     border-radius: 30px;
-    /*border: none*/
-    /*background-color: #342822;*/
     border-color: white;
     background: linear-gradient(to bottom, rgb(76, 0, 19), black);
 }
