added overlay div to main.handlebars so all templates will have same overlay; added neon styling to H1 elements and form labels

--- a/views/onboarding.handlebars
+++ b/views/onboarding.handlebars
@@ -1,5 +1,5 @@
     <article>
-        <h1 id="onBH1">Create an Account</h1>
+        <h1 id="onBH1" class="neon">Create an Account</h1>
         <form action="/users" method="POST">
           <label>
             First Name
