--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="/public/css/main-styles.css">
 </head>
 <body>
+<div class="overlay">
     <!-- <h1>{{header}}</h1>  -->  
     <main>
         {{{body}}}
     </main>
+</div>
 </body>
 </html>
