--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -28,17 +28,7 @@ h1 {
 }
 
 label {
-    color: #fff;
-    text-shadow:
-            0 0 7px #fff,
-            0 0 10px #fff,
-            0 0 21px #fff,
-            0 0 42px #f09,
-            0 0 82px #f09,
-            0 0 92px #f09,
-            0 0 102px #f09,
-            0 0 151px #f09;
-    animation: pulsate 0.11s ease-in-out infinite alternate;
+    color: white;
 }
 
 @keyframes pulsate {
