made select menu required

--- a/views/users/onboarding.handlebars
+++ b/views/users/onboarding.handlebars
@@ -60,7 +60,7 @@
             </div>
             <div class="multi-select-container">
                 <label for="interests">Interests<br>(Select up to 10 total)</label>
-                <select id="interests" name="interests" multiple size="25">
+                <select id="interests" name="interests" multiple size="25" required>
                     <option disabled selected>Active Life</option>
                     <option value="amusementparks">Amusement Parks</option>
                     <option value="aquariums">Aquariums</option>
