--- a/views/users/onboarding.handlebars
+++ b/views/users/onboarding.handlebars
@@ -1,5 +1,5 @@
 <div class="onboarding">
-    <h2>CREATE ACCOUNT</h2>
+    <h2 class="neon">CREATE ACCOUNT</h2>
     <form id="onboardingForm" action="/users/onboarding" method="post">
         <section>
             <label for="firstName">
