Changed object in res.json

--- a/views/users/onboarding.handlebars
+++ b/views/users/onboarding.handlebars
@@ -25,13 +25,13 @@
             <label for="showGender" id="showGenderLabel">Show gender on my profile</label>
             <input id="showGender" type="checkbox" name="showGender">
 
-            <label id="sexualOrientationLabel">Who are you interested in?</label>
+            <label id="genderInterestLabel">Who are you interested in?</label>
             <div class="multipleInputContainer">
-                <input id="likeMen" type="radio" name="sexualOrientation" value="Men"/>
+                <input id="likeMen" type="radio" name="genderInterest" value="Men"/>
                 <label for="likeMen">Men</label>
-                <input id="likeWomen" type="radio" name="sexualOrientation" value="Women" required/>
+                <input id="likeWomen" type="radio" name="genderInterest" value="Women" required/>
                 <label for="likeWomen">Women</label>
-                <input id="likeEveryone" type="radio" name="sexualOrientation" value="Everyone"/>
+                <input id="likeEveryone" type="radio" name="genderInterest" value="Everyone"/>
                 <label for="likeEveryone">Everyone</label>
             </div>
 
