--- a/views/users/signup.handlebars
+++ b/views/users/signup.handlebars
@@ -13,7 +13,7 @@
             </label>
 
             <label for="confirmPassword">
-                Password
+                Confirm Password
                 <input id="confirmPassword" type="password" name="conUserPassword" placeholder="Confirm Password" value="{{conUserPassword}}" required/>
             </label>
         </section>
